--- a/index.html
+++ b/index.html
@@ -23,34 +23,60 @@
             </div>
         </section>
 
-        <section class="grid md:grid-cols-3 gap-8 mb-12 text-center">
+        <section class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 mb-12 text-center">
             <div class="bg-white p-6 rounded-lg border">
                 <div class="bg-teal-100 p-3 rounded-full inline-flex items-center justify-center mb-4">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-teal-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M4 4v5h5V4H4zm0 9h5v5H4v-5zm9-9h5v5h-5V4zm0 9h5v5h-5v-5z" /></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-teal-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7" /></svg>
                 </div>
-                <h3 class="text-xl font-semibold text-slate-800 mb-2">Güncel Soru Bankası</h3>
-                <p class="text-slate-600">Mevzuattaki en son değişikliklere uygun, özenle hazırlanmış binlerce soru ile sınava tam hazır olun.</p>
+                <h3 class="text-xl font-semibold text-slate-800 mb-2">Tamamen Ücretsiz</h3>
+                <p class="text-slate-600">Tüm konu anlatımlarına ve deneme sınavlarına hiçbir ücret ödemeden erişin.</p>
             </div>
             <div class="bg-white p-6 rounded-lg border">
                 <div class="bg-amber-100 p-3 rounded-full inline-flex items-center justify-center mb-4">
-                     <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-amber-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" /></svg>
+                     <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-amber-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M8 11V7a4 4 0 118 0v4M5 9h14l1 12H4L5 9z" /></svg>
                 </div>
-                <h3 class="text-xl font-semibold text-slate-800 mb-2">Gerçek Sınav Deneyimi</h3>
-                <p class="text-slate-600">Süre tutarak çözebileceğiniz denemelerle sınav atmosferini yaşayın ve zaman yönetimi becerinizi geliştirin.</p>
+                <h3 class="text-xl font-semibold text-slate-800 mb-2">Üyelik Gerektirmez</h3>
+                <p class="text-slate-600">Kayıt olmadan, kişisel bilgi paylaşmadan doğrudan çalışmaya başlayın.</p>
             </div>
             <div class="bg-white p-6 rounded-lg border">
                  <div class="bg-blue-100 p-3 rounded-full inline-flex items-center justify-center mb-4">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" /></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M4 4v5h5V4H4zm0 9h5v5H4v-5zm9-9h5v5h-5V4zm0 9h5v5h-5v-5z" /></svg>
                 </div>
-                <h3 class="text-xl font-semibold text-slate-800 mb-2">Detaylı Performans Analizi</h3>
-                <p class="text-slate-600">Sınav sonunda doğru, yanlış ve boş sayılarınızı görün. Yanlış yaptığınız soruların çözümlerini inceleyin.</p>
+                <h3 class="text-xl font-semibold text-slate-800 mb-2">Sürekli Gelişim</h3>
+                <p class="text-slate-600">Bu platform, sizin geri bildirimlerinizle her gün büyüyen ve güncellenen bir projedir.</p>
+            </div>
+             <div class="bg-white p-6 rounded-lg border">
+                 <div class="bg-rose-100 p-3 rounded-full inline-flex items-center justify-center mb-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-rose-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M4 4v5h5V4H4zm0 9h5v5H4v-5zm9-9h5v5h-5V4zm0 9h5v5h-5v-5z" /></svg>
+                </div>
+                <h3 class="text-xl font-semibold text-slate-800 mb-2">Güncel Mevzuat</h3>
+                <p class="text-slate-600">Sorular ve içerikler, en son mevzuat değişikliklerine göre düzenli olarak güncellenmektedir.</p>
             </div>
         </section>
 
-        <section class="card bg-teal-500 text-white p-8 md:p-12 rounded-lg text-center">
-            <h2 class="text-3xl font-bold mb-4">Hazırlığa Bugün Başlayın</h2>
-            <p class="text-lg text-teal-100 max-w-2xl mx-auto mb-6">Kariyerinizdeki bir sonraki adıma ulaşmak için daha fazla beklemeyin. İlk deneme sınavınızı şimdi çözün!</p>
-            <a href="/adalet-gys-portal/deneme-sinavlari/" class="btn bg-white text-teal-600 hover:bg-slate-100 text-lg px-8 py-3">Tüm Denemeleri Gör</a>
+        <section>
+            <h2 class="text-3xl font-bold text-center text-slate-800 mb-8">Yeni Eklenenler</h2>
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <a href="/adalet-gys-portal/deneme-sinavlari/genel-denemeler/deneme-1.html" class="category-card relative bg-white p-6 rounded-lg border shadow-sm flex flex-col hover:border-teal-500 hover:shadow-md transition-all">
+                    <span class="new-badge">YENİ</span>
+                    <h3 class="text-xl font-semibold text-slate-800 mb-3">Genel Deneme Sınavı - 1</h3>
+                    <p class="text-slate-600 flex-grow">
+                        Tüm ortak ve alan konularını içeren, tam kapsamlı ilk deneme sınavımız yayında!
+                    </p>
+                </a>
+                <a href="/adalet-gys-portal/ortak-konular/01-tc-anayasasi.html" class="category-card relative bg-white p-6 rounded-lg border shadow-sm flex flex-col hover:border-teal-500 hover:shadow-md transition-all">
+                    <h3 class="text-xl font-semibold text-slate-800 mb-3">T.C. Anayasası Konu Anlatımı</h3>
+                    <p class="text-slate-600 flex-grow">
+                        Sınavda en çok soru gelen bölümlerden biri olan Anayasa konusu, özet notlarla hazırlandı.
+                    </p>
+                </a>
+                <a href="/adalet-gys-portal/alan-konulari/yazi-isleri-muduru/" class="category-card relative bg-white p-6 rounded-lg border shadow-sm flex flex-col hover:border-teal-500 hover:shadow-md transition-all">
+                    <h3 class="text-xl font-semibold text-slate-800 mb-3">Yazı İşleri Müdürlüğü Alan Konuları</h3>
+                    <p class="text-slate-600 flex-grow">
+                        Yazı İşleri Müdürlüğü için %60'lık bölümü oluşturan tüm alan konuları listesi eklendi.
+                    </p>
+                </a>
+            </div>
         </section>
     </main>
 </body>
