--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
-    
     <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
 </head>
 
@@ -26,28 +25,28 @@
         <section class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 mb-12 text-center">
             <div class="bg-white p-6 rounded-lg border">
                 <div class="bg-teal-100 p-3 rounded-full inline-flex items-center justify-center mb-4">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-teal-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7" /></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-teal-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7"></path></svg>
                 </div>
                 <h3 class="text-xl font-semibold text-slate-800 mb-2">Tamamen Ücretsiz</h3>
                 <p class="text-slate-600">Tüm konu anlatımlarına ve deneme sınavlarına hiçbir ücret ödemeden erişin.</p>
             </div>
             <div class="bg-white p-6 rounded-lg border">
                 <div class="bg-amber-100 p-3 rounded-full inline-flex items-center justify-center mb-4">
-                     <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-amber-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M8 11V7a4 4 0 118 0v4M5 9h14l1 12H4L5 9z" /></svg>
+                     <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-amber-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M8 11V7a4 4 0 118 0v4M5 9h14l1 12H4L5 9z"></path></svg>
                 </div>
                 <h3 class="text-xl font-semibold text-slate-800 mb-2">Üyelik Gerektirmez</h3>
                 <p class="text-slate-600">Kayıt olmadan, kişisel bilgi paylaşmadan doğrudan çalışmaya başlayın.</p>
             </div>
             <div class="bg-white p-6 rounded-lg border">
                  <div class="bg-blue-100 p-3 rounded-full inline-flex items-center justify-center mb-4">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M4 4v5h5V4H4zm0 9h5v5H4v-5zm9-9h5v5h-5V4zm0 9h5v5h-5v-5z" /></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M4 4v5h5V4H4zm0 9h5v5H4v-5zm9-9h5v5h-5V4zm0 9h5v5h-5v-5z"></path></svg>
                 </div>
                 <h3 class="text-xl font-semibold text-slate-800 mb-2">Sürekli Gelişim</h3>
                 <p class="text-slate-600">Bu platform, sizin geri bildirimlerinizle her gün büyüyen ve güncellenen bir projedir.</p>
             </div>
              <div class="bg-white p-6 rounded-lg border">
                  <div class="bg-rose-100 p-3 rounded-full inline-flex items-center justify-center mb-4">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-rose-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M4 4v5h5V4H4zm0 9h5v5H4v-5zm9-9h5v5h-5V4zm0 9h5v5h-5v-5z" /></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-rose-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M4 4v5h5V4H4zm0 9h5v5H4v-5zm9-9h5v5h-5V4zm0 9h5v5h-5v-5z"></path></svg>
                 </div>
                 <h3 class="text-xl font-semibold text-slate-800 mb-2">Güncel Mevzuat</h3>
                 <p class="text-slate-600">Sorular ve içerikler, en son mevzuat değişikliklerine göre düzenli olarak güncellenmektedir.</p>
@@ -64,13 +63,13 @@
                         Tüm ortak ve alan konularını içeren, tam kapsamlı ilk deneme sınavımız yayında!
                     </p>
                 </a>
-                <a href="/adalet-gys-portal/ortak-konular/01-tc-anayasasi.html" class="category-card relative bg-white p-6 rounded-lg border shadow-sm flex flex-col hover:border-teal-500 hover:shadow-md transition-all">
+                <a href="/adalet-gys-portal/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html" class="category-card relative bg-white p-6 rounded-lg border shadow-sm flex flex-col hover:border-teal-500 hover:shadow-md transition-all">
                     <h3 class="text-xl font-semibold text-slate-800 mb-3">T.C. Anayasası Konu Anlatımı</h3>
                     <p class="text-slate-600 flex-grow">
                         Sınavda en çok soru gelen bölümlerden biri olan Anayasa konusu, özet notlarla hazırlandı.
                     </p>
                 </a>
-                <a href="/adalet-gys-portal/alan-konulari/yazi-isleri-muduru/" class="category-card relative bg-white p-6 rounded-lg border shadow-sm flex flex-col hover:border-teal-500 hover:shadow-md transition-all">
+                <a href="/adalet-gys-portal/konu-anlatimlari/alan-konulari/yazi-isleri-muduru/" class="category-card relative bg-white p-6 rounded-lg border shadow-sm flex flex-col hover:border-teal-500 hover:shadow-md transition-all">
                     <h3 class="text-xl font-semibold text-slate-800 mb-3">Yazı İşleri Müdürlüğü Alan Konuları</h3>
                     <p class="text-slate-600 flex-grow">
                         Yazı İşleri Müdürlüğü için %60'lık bölümü oluşturan tüm alan konuları listesi eklendi.
