--- a/deneme-sinavlari/index.html
+++ b/deneme-sinavlari/index.html
@@ -21,7 +21,19 @@
                 </p>
             </div>
 
-            <div class="category-grid">
+            <div class="grid md:grid-cols-3 gap-8">
+                <a href="alan-denemeleri/" class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col text-center items-center hover:border-teal-500 hover:shadow-md transition-all">
+                     <div class="mb-4 bg-teal-100 p-3 rounded-full inline-flex">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-teal-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"></path>
+                        </svg>
+                    </div>
+                    <h2 class="text-xl font-semibold text-slate-800 mb-3">Alan Denemeleri</h2>
+                    <p class="text-slate-600 flex-grow">
+                        Yazı İşleri Müdürlüğü gibi belirli bir unvana yönelik hazırlanan özel denemeler.
+                    </p>
+                </a>
+                
                 <a href="genel-denemeler/" class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col text-center items-center hover:border-teal-500 hover:shadow-md transition-all">
                     <div class="mb-4 bg-blue-100 p-3 rounded-full inline-flex">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
@@ -35,25 +47,13 @@
                     </p>
                 </a>
 
-                <a href="alan-denemeleri/" class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col text-center items-center hover:border-teal-500 hover:shadow-md transition-all">
-                     <div class="mb-4 bg-teal-100 p-3 rounded-full inline-flex">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-teal-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"></path>
-                        </svg>
-                    </div>
-                    <h2 class="text-xl font-semibold text-slate-800 mb-3">Alan Denemeleri</h2>
-                    <p class="text-slate-600 flex-grow">
-                        Yazı İşleri Müdürlüğü gibi belirli bir unvana yönelik hazırlanan özel denemeler.
-                    </p>
-                </a>
-
                 <a href="ortak-konular-denemeleri/" class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col text-center items-center hover:border-teal-500 hover:shadow-md transition-all">
                     <div class="mb-4 bg-amber-100 p-3 rounded-full inline-flex">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-amber-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path>
                         </svg>
                     </div>
-                    <h2 class="text-xl font-semibold text-slate-800 mb-3">Ortak Konular Denemeleri</h2>
+                    <h2 class="text-xl font-semibold text-slate-800 mb-3">Ortak Konu Denemeleri</h2>
                     <p class="text-slate-600 flex-grow">
                         Sadece ortak konulardan oluşan, bilginizi pekiştirmeye yönelik mini denemeler.
                     </p>
