--- a/_templates/sinav-sablonu.html
+++ b/_templates/sinav-sablonu.html
@@ -32,9 +32,10 @@
         </div>
     </header>
 
-    <main class="container page-content">
+    <main id="app-container" class="container page-content">
         <div class="max-w-4xl mx-auto">
-            
+            <div id="timer-announcer" aria-live="polite" aria-atomic="true"></div>
+
             <div id="welcome-screen">
                 <div class="card p-8 md:p-12 text-center">
                     <div class="bg-slate-50 border border-slate-200 rounded-lg p-6 mb-10">
@@ -57,23 +58,21 @@
                             <h2 class="text-xl font-semibold text-slate-800 border-b pb-3 mb-4">Kullanım Kılavuzu</h2>
                             <ul class="space-y-3 text-slate-700">
                                 <li class="flex items-start"><span class="mr-3 text-teal-500">✓</span><p><b>Cevaplama:</b> Bir seçeneği işaretlemek için doğrudan üzerine tıklayın.</p></li>
-                                <li class="flex items-start"><span class="mr-3 text-teal-500">✓</span><p><b>İşaretleme:</b> Sağ üstteki bayrak simgesine tıklayarak soruyu daha sonra gözden geçirmek için işaretleyebilirsiniz.</p></li>
-                                <li class="flex items-start"><span class="mr-3 text-teal-500">✓</span><p><b>Gezinme:</b> "Önceki" ve "Sonraki" butonlarını veya Soru Gezgini'ni kullanabilirsiniz.</p></li>
-                                <li class="flex items-start"><span class="mr-3 text-teal-500">✓</span><p><b>Raporlama:</b> Sınav bitiminde, performans özetinizi ve yanlış cevaplarınızı içeren bir analiz sayfası sizi karşılayacaktır.</p></li>
+                                <li class="flex items-start"><span class="mr-3 text-teal-500">✓</span><p><b>İşaretleme:</b> Sağ üstteki <svg class="inline-block h-5 w-5 text-slate-500 -mt-1" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 21v-4m0 0V5a2 2 0 012-2h6.5l1 1H21l-3 6 3 6H8.5l-1-1H5a2 2 0 00-2 2z"></path></svg> simgesine tıklayarak bir soruyu daha sonra gözden geçirmek için işaretleyebilirsiniz.</p></li>
+                                <li class="flex items-start"><span class="mr-3 text-teal-500">✓</span><p><b>Gezinme:</b> "Önceki" ve "Sonraki" butonlarını kullanarak sorular arasında geçiş yapabilirsiniz.</p></li>
+                                <li class="flex items-start"><span class="mr-3 text-teal-500">✓</span><p><b>Raporlama:</b> Sınav bitiminde, performans özetinizi, yanlış cevaplarınızı ve işaretlediğiniz soruları içeren bir analiz sayfası sizi karşılayacaktır.</p></li>
                             </ul>
                         </div>
                     </div>
                     <button id="start-exam-btn" class="start-btn w-full md:w-auto inline-flex items-center justify-center text-white font-bold text-lg px-12 py-4 rounded-lg" disabled>
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z" /><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
                         <span id="start-btn-full-text">Sorular Yükleniyor...</span>
                     </button>
                 </div>
             </div>
 
             <div id="quiz-screen" class="hidden">
-                <div class="progress-bar-container card mb-6 p-1">
-                    <div id="progress-bar" class="progress-bar"></div>
-                </div>
+                <div class="progress-bar-container card mb-6 p-1"><div id="progress-bar" class="progress-bar"></div></div>
                 <div class="card p-6 relative">
                     <div class="flex justify-between items-center mb-6 bg-slate-50 -m-6 p-6 pb-4 rounded-t-lg border-b">
                         <span id="question-counter" class="text-lg font-bold text-teal-500"></span>
@@ -83,8 +82,8 @@
                             <div><span class="text-xs font-medium text-slate-500">KALAN SÜRE</span><div id="remaining-time" class="text-xl font-bold text-teal-600">00:00:00</div></div>
                         </div>
                         <button id="mark-review-btn" title="İncelemek için işaretle" class="flag-icon text-slate-400 hover:text-yellow-500" aria-label="Soruyu işaretle">
-                            <svg id="flag-outline-icon" xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M3 21v-4m0 0V5a2 2 0 012-2h6.5l1 1H21l-3 6 3 6H8.5l-1-1H5a2 2 0 00-2 2z" /></svg>
-                            <svg id="flag-solid-icon" xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 hidden" viewBox="0 0 20 20" fill="currentColor"><path d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" /></svg>
+                            <svg id="flag-outline-icon" xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M3 21v-4m0 0V5a2 2 0 012-2h6.5l1 1H21l-3 6 3 6H8.5l-1-1H5a2 2 0 00-2 2z"></path></svg>
+                            <svg id="flag-solid-icon" xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 hidden" viewBox="0 0 20 20" fill="currentColor"><path d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z"></path></svg>
                         </button>
                     </div>
                     <div class="mt-8 mb-8"><div id="question-text-container"><pre id="question-text"></pre></div></div>
@@ -117,7 +116,7 @@
                         <div id="success-rate-box" class="p-4 bg-blue-100 rounded-lg"><p class="text-2xl font-bold" id="success-rate">0%</p><p id="success-text">Başarı</p></div>
                     </div>
                     <div class="flex flex-wrap items-center gap-4 mb-6">
-                        <button class="tab-btn flex-1 tab-active" id="wrong-answers-tab"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-red-500" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" /></svg><span>Yanlış Cevaplar</span></button>
+                        <button class="tab-btn flex-1 tab-active" id="wrong-answers-tab"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-red-500" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"></path></svg><span>Yanlış Cevaplar</span></button>
                         <button class="tab-btn flex-1" id="marked-questions-tab"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-yellow-500" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" clip-rule="evenodd"></path></svg><span>İşaretlenen Sorular</span></button>
                     </div>
                     <div id="wrong-answers-panel"><div id="wrong-answers-container" aria-live="polite"></div></div>
@@ -137,7 +136,9 @@
     <div id="alert-modal" class="fixed inset-0 bg-slate-900 bg-opacity-75 hidden items-center justify-center p-4 z-50">
         <div class="card p-8 max-w-sm mx-auto text-center">
             <div class="mx-auto flex items-center justify-center h-12 w-12 rounded-full bg-yellow-100 mb-4">
-                <svg class="h-6 w-6 text-yellow-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" /></svg>
+                <svg class="h-6 w-6 text-yellow-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"></path>
+                </svg>
             </div>
             <h3 class="text-xl font-bold text-slate-900 mb-4" id="alert-modal-title">UYARI</h3>
             <p class="text-slate-600 mb-8" id="alert-modal-message"></p>
